--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+#Junk
+.DS_Store
+.vscode/
+.idea/
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Local Netlify folder
+.netlify
+
 # Logs
 logs
 *.log
