--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "react-toastify": "^9.0.3",
     "react-transition-group": "^4.4.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "sass": "^1.52.2",
     "web-vitals": "^2.1.3",
     "yup": "^0.32.11"
   },
