--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nanoid": "^3.3.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^6.0.0-0",
     "react-redux": "^8.0.1",
