--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "date-fn": "^0.0.2",
     "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
+    "moment": "^2.29.3",
     "nanoid": "^3.3.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
