--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "date-fn": "^0.0.2",
     "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
@@ -16,6 +18,7 @@
     "nanoid": "^3.3.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^6.0.0-0",
