--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "react-chartjs-2": "^4.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
-    "react-loader-spinner": "^6.0.0-0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "react-spinners": "^0.13.3",
     "react-toastify": "^9.0.5",
     "react-transition-group": "^4.4.2",
     "redux-logger": "^3.0.6",
