--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "predeploy": "npm run build",
-    "deploy": "netlify deploy -p"
-  },
+    "deploy": "netlify deploy -p",
+    "lint:js": "eslint src/**/*.js"
+    },
+
   "eslintConfig": {
     "extends": [
       "react-app",
