--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "css-loader": "^6.7.1",
     "eslint": "^8.17.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.3",
